# g2pk4

./: MANIFEST.in  README.md  pyproject.toml  requirements-ja.txt  requirements.txt  setup.py  test.py
g2pk2/: __init__.py  english.py  g2pk2.py  regular.py  special.py
src/g2pk3/: __init__.py  g2pk3.py
src/g2pk4/: __init__.py  english.py  g2pk4.py  japanese.py  special.py  utils.py
src/g2pk4/normalaizer/: english.py
